# Automatyczne-generowanie-video-z-obrazk-w

./: .gitignore  CONTRIBUTING.md  README.md  agents.md  ken_burns_beatsync.py  ken_burns_scroll_audio.py  main.py  moviepy_config_defaults.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: AUDIT.md  LOOK.md  cli_examples.md
docs/KB/: architecture.md  cli_reference.md  code_quality.md  env.md  index.md  io_conventions.md  modules.md  tests_report.md  transitions.md
ken_burns_reel/: __init__.py  __main__.py  audio.py  bin_config.py  bubbles.py  builder.py  captions.py  cli.py  color.py  config.py  focus.py  layers.py  motion.py  ocr.py  panels.py  transitions.py  utils.py  validate.py
ken_burns_reel/styles/: float_black_v1.yaml
scripts/: extract_cli.py  gen_kb.py  ken_burns_scroll_audio.py
styles/: float_black_v1.yaml
tests/: test_audio.py  test_bubbles.py  test_builder_sequence_basic.py  test_cli.py  test_cli_args.py  test_focus_guard.py  test_io_naming.py  test_layers_page_shadow.py  test_mask_processing.py  test_new_features.py  test_ocr.py  test_overlay_aspect.py  test_overlay_bg.py  test_overlay_errors.py  test_overlay_lift.py  test_panels_items.py  test_transitions.py  test_validate_main.py
tests/color/: test_colorlock.py
tests/focus/: test_focus.py
tests/masks/: test_masks_fillholes.py
tests/motion/: test_motion.py
tests/overlay/: test_min_read.py  test_overlay_bg.py  test_panels_items.py
tests/tools/: test_autoqa.py
tests/video/: test_builder_sequence_basic.py  (+2 more)
tools/: autoqa.py  diagnose_env.py
