[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ken-burns-reel"
version = "0.2.1+filmic"
description = "Automatyczne generowanie wideo z obrazków (Ken Burns + komiksowe panele)"
authors = [{ name="PKrokosz" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["ken_burns_reel*"]
exclude = ["legacy_old*"]

[project.optional-dependencies]
dev = [
  "pytest",
  "opencv-python-headless>=4.9",
  "moviepy<2",
  "numpy",
  "Pillow",
  "PyYAML"
]
